@@ -1,0 +1,8 @@
+type file;
+
+string s = "foo";
+
+file f <"writeDataPrimitive.out">;
+
+f=writeData(s);
+
