@@ -1,0 +1,8 @@
+type file;
+
+string s[] = ["foo", "bar"];
+
+file f <"writeDataStringArray.out">;
+
+f=writeData(s);
+
