@@ -1,0 +1,6 @@
+r c l 
+Foo FOO foo 
+Bar BAR bar 
+Baz BAZ baz 
+Qux QUX qux 
+Frrrr FRRRR frrrr 
